# tdd_lab2

./: README.md  pyproject.toml
src/: converter.py
tests/: test_roman_to_decimal.py
